# ada

./: LICENSE  README.md  app.py  config.py  database.py  extensions.py  init.py  main.py  models.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  test_llamada.py
attached_assets/: Pasted--Actualmente-parece-que-varios-errores-afectan-al-funcionamiento-de-tu-sistema-Vamos-a-desglosarlo-1735390314616.txt  Pasted--Antonio-los-dos-c-digos-que-compartiste-est-n-retocando-el-archivo-main-py-pero-tienen-algunas-di-1734965926775.txt  Pasted--Bloque-1-Introducci-n-y-Presentaci-n-del-Servicio-Pregunta-Qu-es-Amigo-GPT-y-c-mo-funciona-1734766349175.txt  Pasted--Buenas-noches-Seg-n-la-informaci-n-que-veo-en-tu-archivo-el-sistema-tiene-varias-verificaciones-y-1735158511969.txt  Pasted--ChatGPT-Plus-Excelente-Verificar-el-funcionamiento-de-las-funciones-del-modelo-Contador-es-un-pa-1735427902627.txt  Pasted--ChatGPT-Plus-Gracias-por-informar-sobre-los-problemas-detectados-Vamos-a-organizarnos-para-encont-1735427957796.txt  Pasted--Corregir-el-Error-de-Estado-Iniciada-en-el-Panel-de-Monitoreo-Problema-El-estado-de-las-llamada-1735424533871.txt  Pasted--Corregir-el-Error-de-Estado-Iniciada-en-el-Panel-de-Monitoreo-Problema-El-estado-de-las-llamada-1735424776603.txt  Pasted--DOCTYPE-html-html-lang-es-head-meta-charset-UTF-8-meta-name-viewport-content-1734789041611.txt  Pasted--Entendido-Vamos-a-corregir-los-problemas-b-sicos-de-las-rutas-y-la-visualizaci-n-primero-para-esta-1735428052853.txt  (+62 more)
migrations/: add_provider_column.py  alembic.ini  env.py  (+2 more)
(+77 files in other folders)
